# Spotify-QML

playaround/: main.cpp
playaround/src/: auth.cpp  auth.h  authserver.cpp  authserver.h
spot-lib/: CMakeLists.txt  libSpotify_global.h
spot-lib/controllers/: AuthController.cpp
spot-lib/network/: AuthServer.cpp  AuthServer.h  HttpClientAuth.cpp  HttpClientAuth.h
spot-lib/src/controllers/: APIController.cpp  AuthController.cpp
spot-lib/src/data/: album.cpp  artist.cpp  artistPage.cpp  baseData.cpp  playList.cpp  playerState.cpp  track.cpp
spot-lib/src/include/controllers/: APIController.h  AuthController.h  ViewController.h
spot-lib/src/include/data/: album.h  artist.h  artistPage.h  baseData.h  playList.h  playerState.h  track.h
spot-lib/src/include/network/: AuthServer.h  HttpClientAuth.h  NetworkManager.h
spot-lib/src/include/network/spotify-api/: AlbumAPI.h  ArtistAPI.h  BaseAPI.h  PlayListsAPI.h  PlayerAPI.h
spot-lib/src/include/setting/: account.h  baseSetting.h
spot-lib/src/network/: AuthServer.cpp  HttpClientAuth.cpp  NetworkManager.cpp
spot-lib/src/network/spotify-api/: AlbumAPI.cpp  ArtistAPI.cpp  PlayListsAPI.cpp  PlayerAPI.cpp
spot-lib/src/setting/: account.cpp  baseSetting.cpp
spot-test/: CMakeLists.txt  main.cpp
spot-test/testsuite/controllers/: AuthControllerTest.h
spot-test/testsuite/network/: AuthServer.h  HttpAuthClient.h  NetworkConfig.h
spot-test/testsuite/network/spotify-api/: PlayListsAPITest.h  PlayerAPITest.h
spot-test/testsuite/setting/: AccountTest.h
spot-ui/: CMakeLists.txt  main.cpp  qml.qrc
spot-ui/assets/images/: CMakeLists.txt
spot-ui/assets/style/: CMakeLists.txt  Style.qml
spot-ui/qml/: AlbumDelegate.qml  AlbumPage.qml  AlbumTrackDelegate.qml  ArtistAlbumDelegate.qml  ArtistDelegate.qml  ArtistPage.qml  ArtistRelatedArtistDelegate.qml  ArtistTrackDelegate.qml  BoundFadeEffect.qml  FilterView.qml  HomePage.qml  LibraryView.qml  MainWindow.qml  MasterPage.qml  NavigationView.qml  PlayListDelegate.qml  PlayListPage.qml  Player.qml  TrackDelegate.qml  Utils.js
